--- a/Commandes/detailsPage.html
+++ b/Commandes/detailsPage.html
@@ -203,8 +203,8 @@
             <option value="Pièce(s)">Pièce(s)</option>
         </select>
         <div class="ajoutboutoncom" style="display: flex; justify-content: space-between;">
-            <button id="ajouterBtn">Ajouter</button>
-        <button id="annulerBtn">Annuler</button>
+            <button id="ajouterBtn" style="border-radius: 5px;">Ajouter</button>
+        <button id="annulerBtn" style="border-radius: 5px;">Annuler</button>
         </div>
     </div>
     
@@ -234,8 +234,8 @@
             <option value="Pièce(s)">Pièce(s)</option>
         </select>
         <div class="editBoutonmodit" style="display: flex; justify-content: space-between;">
-            <button id="updateBtn">Mettre à jour</button>
-        <button id="deleteBtn">Supprimer</button>
+            <button id="updateBtn" style="border-radius: 5px;">Mettre à jour</button>
+        <button id="deleteBtn" style="border-radius: 5px;">Supprimer</button>
         </div>
         <!-- <button id="editAnnulerBtn">Annuler</button> -->
     </div>
