--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
                 
                     <div class="popup-overlay" id="popupOverlay" style="display: none;">
                       <div class="popup-content">
+                          <!-- Icône de fermeture -->
+    <span class="close-icon"  id="closeIcon" style=" position: absolute;
+    top: 10%;
+    right: 10px;
+    font-size: 30px;
+    cursor: pointer;">&times;</span>
+
                         <h3 id="popupTitle">AJOUTER UN PRODUIT</h3>
+                        
                         <label>
                             Désignation:
                             <input type="text" id="designationInput" required />
