--- a/Commandes/commandes.html
+++ b/Commandes/commandes.html
@@ -27,7 +27,7 @@
             </aside>
             <main class="menu-main" id="mainContent">
                 <div class="stock-card">
-                    <h2>Stock disponible</h2>
+                    <h2>Commandes</h2>
                     <button class="add-product-button" id="ajouteCommandetBtn">Ajouter commande</button>
                 </div>
 
