--- a/Commandes/commandes.html
+++ b/Commandes/commandes.html
@@ -37,7 +37,8 @@
                         <i class="fas fa-times"></i> 
                     </span>
                     
-                    <h2 >Ajouter une commande</h2>
+                    <h2 style=" text-align: center;
+    color: darkslateblue;">Ajouter une commande</h2>
                     <form id="commandeForm">
                         <div>
                             <label for="champsFournisseur">Fournisseur:</label>
