--- a/Livraisons/livraisons.html
+++ b/Livraisons/livraisons.html
@@ -56,10 +56,12 @@
                     
                     <label for="unite">Unité:</label>
                     <select id="unite" name="unite" required>
-                        <option value="gr">gr</option>
-                        <option value="kg">kg</option>
-                        <option value="boîte(s)">boîte(s)</option>
-                        <option value="pièce(s)">pièce(s)</option>
+                        <option value="">Sélectionnez une unité</option> <!-- Ajoutez une option vide -->
+                        <option value="Gr">Gr</option>
+                        <option value="Kg">Kg</option>
+                        <option value="boîte(s)">Boîte(s)</option>
+                        <option value="Carton(s)">Carton(s)</option>
+                        <option value="Pièce(s)">Pièce(s)</option>
                     </select>
                 
                     <label for="date">Date:</label>
