--- a/Commandes/detailsPage.html
+++ b/Commandes/detailsPage.html
@@ -223,7 +223,7 @@
         <h3 style="text-align: center; color: darkslateblue;">Modifier cette commande</h3>
         <input type="text" id="editDesignation" placeholder="Désignation du produit" required>
         <input type="text" id="editVariete" placeholder="Variété (facultatif)">
-        <input type="number" id="editQuantite" placeholder="Quantité" required>
+        <input type="number" id="editQuantite" placeholder="Quantité" min="1" required>
 
         <select id="editUnite" name="unite" required>
             <option value="">Sélectionnez une unité</option> <!-- Ajoutez une option vide -->
