--- a/Livraisons/detailslivraisons.html
+++ b/Livraisons/detailslivraisons.html
@@ -191,7 +191,7 @@ button:hover {
             <label for="variete">Variété:</label>
             <input type="text" id="variete" />
             <label for="quantite">Quantité:</label>
-            <input type="number" id="quantite" />
+            <input type="number" id="quantite" min="1" />
             <label for="unite">Unité:</label>
             <select id="unite" name="unite" required>
                 <option value="">Sélectionnez une unité</option> <!-- Ajoutez une option vide -->
