--- a/Commandes/commandes.html
+++ b/Commandes/commandes.html
@@ -54,7 +54,7 @@
                         </div>
                         <div>
                             <label for="champsQuantite">Quantité:</label>
-                            <input type="number" id="champsQuantite" name="quantite" required>
+                            <input type="number" id="champsQuantite" name="quantite" min="1" required>
                         </div>
                         <div>
                             <label for="champsUnite">Unité:</label>
