--- a/Livraisons/livraisons.html
+++ b/Livraisons/livraisons.html
@@ -52,7 +52,7 @@
                     <input type="text" id="variete" name="variete" required>
                     
                     <label for="quantite">Quantité:</label>
-                    <input type="number" id="quantite" name="quantite" required>
+                    <input type="number" id="quantite" name="quantite" min="1" required>
                     
                     <label for="unite">Unité:</label>
                     <select id="unite" name="unite" required>
