--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                           </label>
                           <label>
                             Quantité:
-                            <input type="number" id="quantiteInput" required />
-                            <span id="quantiteError" class="error-message"></span>
+                            <input type="number" id="quantiteInput" min="1" required />
+                            <span id="quantiteError" class="error-message" ></span>
                           </label>
                           <label>
                             Unité:
